# tap-nasa

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: build.yml  test.yml
tap_nasa/: __init__.py  __main__.py  client.py  tap.py
tests/: test_core.py
